--- a/public/wp-content/themes/houzez/css/custom.index.css
+++ b/public/wp-content/themes/houzez/css/custom.index.css
@@ -1166,3 +1166,9 @@ span.user-name {
 .color-white {
     color: #ffffff;
 }
+.content-column {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
+    text-align: center;
+}
