--- a/public/wp-content/themes/houzez/css/custom.admin.css
+++ b/public/wp-content/themes/houzez/css/custom.admin.css
@@ -8,11 +8,40 @@
     height:100%;
 }
 .input-group-addon:first-child {
-   border-right:1px solid;
+    border-right:1px solid;
 }
 .input-group-addon i {
     color: #00aeef;
 }
 .no-float {
     float:none !important;
+}
+.table-statistic {
+
+}
+.table-statistic tr td{
+    border-top: transparent !important;
+    padding-bottom: 18px !important;
+    padding-top: 18px !important;
+}
+.widget-sales {
+    background-color: #f5f5f5;
+    border-radius: 4px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    border: 1px solid #E6EAEE;
+    text-align: center;
+}
+.no-of-sales {
+    padding-bottom: 0px;
+    padding-top: 6px;
+    font-size: 25px;
+    color: #354052;
+    font-weight: 400;
+}
+.sales {
+    padding-bottom: 10px;
+}
+.no-resize {
+    resize:none;
 }
