--- a/public/wp-content/themes/houzez/css/custom.index.css
+++ b/public/wp-content/themes/houzez/css/custom.index.css
@@ -1175,3 +1175,6 @@ span.user-name {
 .margin-2 {
     margin: 2px;
 }
+.location-block {
+    background-image:url(/default-image/da-nang-vietnam.jpg);
+}
