--- a/public/wp-content/themes/houzez/css/custom.index.css
+++ b/public/wp-content/themes/houzez/css/custom.index.css
@@ -1260,3 +1260,6 @@ padding-bottom: 15px;
 .banner-parallax .banner-bg-wrap .banner-inner{
     background-image: url(/default-image/da-nang-vietnam.jpg);
 }
+.error {
+    color: red;
+}
